--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -9,7 +9,7 @@
 
         <style type="text/css">
             html, body {
-                background: linear-gradient(to right, #141E30 , #243B55);
+                background: linear-gradient(to right, #1488CC , #2B32B2);
             }
         </style>
 
@@ -470,7 +470,7 @@
         // ----------------------------------------
 
         var MAX_PARTICLES = 280;
-        var COLOURS = [ '#69D2E7', '#A7DBD8', '#E0E4CC', '#F38630', '#FA6900', '#FF4E50', '#F9D423' ];
+        var COLOURS = [ '#ecf0f1', '#2980b9', '#273c75', ];
 
         var particles = [];
         var pool = [];
