--- a/index.html
+++ b/index.html
@@ -786,6 +786,9 @@ function scrollToElement(element) {
 
       document.getElementById('timeline-block-4').style.display = "none";
 
+      document.getElementById('cd-timeline-title').scrollIntoView({block: 'start', behavior:'smooth'});
+
+
      }
     function open_management() {
 
@@ -806,6 +809,9 @@ function scrollToElement(element) {
 
       document.getElementById('timeline-block-4').style.display = "none";
 
+      document.getElementById('cd-timeline-title').scrollIntoView({block: 'start', behavior:'smooth'});
+
+
           }
     function open_digitalMedia() {
 
@@ -824,6 +830,7 @@ function scrollToElement(element) {
       document.getElementById('timeline-card-grade3').innerHTML = "Grade (10th-12th)"
 
       document.getElementById('timeline-block-4').style.display = "none";
+      document.getElementById('cd-timeline-title').scrollIntoView({block: 'start', behavior:'smooth'});
 
 
 
@@ -846,6 +853,7 @@ function scrollToElement(element) {
 
       document.getElementById('timeline-block-4').style.display = "none";
 
+      document.getElementById('cd-timeline-title').scrollIntoView({block: 'start', behavior:'smooth'});
 
 
     }
@@ -867,6 +875,7 @@ function scrollToElement(element) {
 
       document.getElementById('timeline-block-4').style.display = "none";
 
+      document.getElementById('cd-timeline-title').scrollIntoView({block: 'start', behavior:'smooth'});
 
     }
 
@@ -874,7 +883,7 @@ function scrollToElement(element) {
             <div class="section light-bg" id="student_projects">
 
 <footer class="my-5 text-center">
-        <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. SAHIT PENMATCHA</small></p>
+        <p class="mb-2"><small>COPYRIGHT © 2018. ALL RIGHTS RESERVED. HSN TSA </small></p>
 
         <small>
             <a href="#" class="m-2">PRESS</a>
