--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -230,25 +230,50 @@
         };
         
         </script>
-         <div class="section white-bg" id="who_we_are">
+         <!-- 
+        What is TSA beginning
+        -->
+         <div class="section bg-white" id="who_we_are">
         <div class="container">
           <div class="row">
             <div class="col-xl-10 col-lg-12 mx-auto">
-                <h2 class="section-heading mb-4">
-                  <span>Who We Are</span>
-                </h2>
+                <h3 class="section-heading mb-4">
+                  What is TSA
+                </h3>
                 <p>Our chapter at High School North was founded just this year. talk about process of founding etc. In our first year alone, we have reached 66 committed members. They are going to be submitting a total of blank projects!</p>
                 <p>Despite being West Windsor Plainsboro High School North’s first year in TSA, the club has become a widespread success in recruiting students from various technology and business based classes. In order to pave a rewarding career path for the students, the school provides multiple course options that dive into specific fields created to master the topic at hand.</p>
           </div>
         </div>
       </div>
         </div>
-        <div class="section light-bg">
+        <!-- 
+        What is TSA closing
+        -->
+         <!-- 
+        Who We Are beginning
+        -->
+         <div class="section" id="who_we_are">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-10 col-lg-12 mx-auto">
+                <h3 class="section-heading mb-4 text-white">
+                  Who We Are
+                </h3>
+                <p class = "text-white">Our chapter at High School North was founded just this year. talk about process of founding etc. In our first year alone, we have reached 66 committed members. They are going to be submitting a total of blank projects!</p>
+                <p class = "text-white">Despite being West Windsor Plainsboro High School North’s first year in TSA, the club has become a widespread success in recruiting students from various technology and business based classes. In order to pave a rewarding career path for the students, the school provides multiple course options that dive into specific fields created to master the topic at hand.</p>
+          </div>
+        </div>
+      </div>
+        </div>
+        <!-- 
+        Who We Are closing
+        -->
+        <div class="section bg-light">
         <div class="container">
             <div class="section-title">
-                <h3>More About US</h3>
+                <h3>More about US</h3>
             </div>
-
+            
             <ul class="nav nav-tabs nav-justified" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link active" data-toggle="tab" href="#communication">Activities</a>
@@ -257,7 +282,7 @@
                     <a class="nav-link" data-toggle="tab" href="#schedule">Competitions</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#messages">Our Officers</a>
+                    <a class="nav-link" data-toggle="tab" href="#messages">Officers</a>
                 </li>
             </ul>
             <div class="tab-content">
