kinda fixed top part

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                             <li class="nav-item"> <a class="nav-link" href="#staff">STAFF</a> </li>
                                             <li class="nav-item"> <a class="nav-link" href="#student_projects">STUDENT PROJECTS</a> </li>
                                             <li class="nav-item"><a href="./tsa-chapter.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">TSA CHAPTER</a></li>
-                                            <li class="nav-item"><a href="#" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
+                                            <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -84,7 +84,7 @@
             
 
         <header class="bg-gradient2"id="home">
-        <div id="container"></div>
+        <div id="container">     </div>
         <header class="info">
             <hgroup class="about">
                     <div class="typewriter">
@@ -96,6 +96,7 @@
                 <a href="https://github.com/soulwire/sketch.js" target="_blank">View on Github</a>
             </nav> -->
         </header>
+
         </header>
 
 
