--- a/design-brief.html
+++ b/design-brief.html
@@ -89,7 +89,7 @@
                     <div class="send" id="send"></div>
                   </div>
                 </div>
-                <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+                <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
   
 
@@ -101,7 +101,7 @@
         
         
         <script src="./js/sketch.js"></script>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script  src="./js/timeline.js"></script>
         <script src="./js/jquery-3.2.1.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
