--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -265,9 +265,8 @@ Who We Are beginning
                 </div>
             </div>
         </div>
-        <!-- 
-Who We Are closing
--->
+        <!-- Who We Are closing-->
+        <!-- our activites opening -->
         <div class="section bg-light" id = "activities">
             <div class="container">
                 <div class="section-title">
@@ -335,6 +334,7 @@ Who We Are closing
 
             </div>
         </div>
+        <!-- our activites closing-->
         <div class="section text-white" id="student_projects">
             <div class="section">
                 <div class="container">
@@ -367,58 +367,11 @@ Who We Are closing
 
             </div>
         </div>
-
-        <section class="section-gap history-area">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-6 col-md-8">
-                        <div class="section-title text-center">
-                            <h2>Glorious History</h2>
-                            <p>It won’t be a bigger problem to find one video game lover in your neighbor. Since the introduction of Virtual Game,</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="history-tab-wrapper">
-                    <div class="row justify-content-between">
-                        <div class="col-lg-4">
-                            <div class="tab-thumb text-center">
-                              <img src="sahit.png" class="img-fluid" alt="">
-                            </div>
-                        </div>
-                        <div class="col-lg-6 ml-auto">
-                            <div class="tab-total-content">
-                                <div class="nav our-tabs" id="myTab" role="tablist">
-                                    <a class="nav-item active akshittabs" id="nav-home-tab" data-toggle="tab" href="#nav-history" role="tab" aria-controls="nav-history" aria-selected="true"><span class="lnr lnr-map"></span>History</a>
-                                    <a class="nav-item akshittabs" id="nav-profile-tab" data-toggle="tab" href="#nav-mission" role="tab" aria-controls="nav-mission" aria-selected="false"><span class="lnr lnr-bullhorn"></span>Mission</a>
-                                    <a class="nav-item akshittabs" id="nav-contact-tab" data-toggle="tab" href="#nav-vission" role="tab" aria-controls="nav-vission" aria-selected="false"><span class="lnr lnr-sun"></span>Vision</a>
-                                </div>
-                                <div class="tab-content mt-40" id="nav-tabContent">
-                                    <div class="tab-pane fade show active " id="nav-history" role="tabpanel" aria-labelledby="nav-home-tab">
-                                        <div class="single-content">
-                                            <h3>History</h3>
-                                            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach.Small Towns and Big StatesFor evidence of the double standard, we need look no farther than Arlington.</p>
-                                        </div>
-                                    </div>
-                                    <div class="tab-pane fade" id="nav-mission" role="tabpanel" aria-labelledby="nav-profile-tab">
-                                        <div class="single-content">
-                                            <h3>Mission</h3>
-                                            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach.Small Towns and Big StatesFor evidence of the double standard, we need look no farther than Arlington.</p>
-                                        </div>
-                                    </div>
-                                    <div class="tab-pane fade" id="nav-vission" role="tabpanel" aria-labelledby="nav-contact-tab">
-                                        <div class="single-content">
-                                            <h3>Vision</h3>
-                                            <p>Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. While men’s borderline-inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards – especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach.Small Towns and Big StatesFor evidence of the double standard, we need look no farther than Arlington.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-1"></div>
-                    </div>
-                </div>
+        <!-- officers begin -->
+        <div class = "white section" id = "officers">
+            <div class="section-title">
+            <h3>Our Officers </h3>
             </div>
-        </section>
         <div class="card">
             <div class="products">
                 <div class="product active" product-id="1">
@@ -449,6 +402,73 @@ Who We Are closing
             </div>
             <div class="footer"><a class="btn" id="prev" href="#" ripple="" ripple-color="#666666">Prev</a><a class="btn" id="next" href="#" ripple="" ripple-color="#666666">Next</a></div>
         </div>
+        </div>
+        <!-- officers close -->
+        <!-- competitions open -->
+        <div class="section" id = "activities">
+            <div class="container">
+                <div class="section-title">
+                    <h3><white>Our Competitions</white></h3>
+                </div>
+                <ul class="nav nav-tabs nav-justified" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#comp1">Competition 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#comp2">Competition 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#comp3">Competition 3</a>
+                    </li>
+                </ul>
+
+                <div class="tab-content nobg">
+                    <div class="tab-pane fade show active" id="comp1">
+                        <div class="d-flex flex-column flex-lg-row">
+                            <div>
+                                <h2 class = "text-white">Communicate with ease</h2>
+                                <p class="lead text-white">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
+                                <p class = "text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
+                                    congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                                </p>
+                                <p class = "text-white"> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
+                                    sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="comp2">
+                        <div class="d-flex flex-column flex-lg-row">
+                            <div>
+                                <h2 class = "text-white">Scheduling when you want</h2>
+                                <p class="lead text-white">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
+                                <p class = "text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
+                                    congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                                </p>
+                                <p class = "text-white"> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
+                                    sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="comp3">
+                        <div class="d-flex flex-column flex-lg-row">
+                            <div>
+                                <h2 class = "text-white">Realtime Messaging service</h2>
+                                <p class="lead text-white">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
+                                <p class = "text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
+                                    congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
+                                </p>
+                                <p class = "text-white"> malesuada faucibus augue aliquet. Sed elit est, eleifend sed dapibus a, semper a eros. Vestibulum blandit vulputate pharetra. Phasellus lobortis leo a nisl euismod, eu faucibus justo sollicitudin. Mauris consectetur, tortor
+                                    sed tempor malesuada, sem nunc porta augue, in dictum arcu tortor id turpis. Proin aliquet vulputate aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- competitions close  -->
         <script>
             // officers
             $(document).ready(function() {
