fixed top scroll on mobile

--- a/index.html
+++ b/index.html
@@ -573,7 +573,9 @@
         // ----------------------------------------
         // Particle
         // ----------------------------------------
-
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+    // Take the user to a different screen here.
+} else {
         
 
 
@@ -714,6 +716,7 @@
 
             }
         };
+    }
         
         </script>
 
