--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
 
         demo.mousemove = function() {
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-    // Take the user to a different screen here.
-} else {
+                    demo.mousemove.scrollTo(touch.x, touch.y);
+            } else {
 
             var particle, theta, force, touch, max, i, j, n;
 
