--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <header class="info">
             <hgroup class="about">
                     <div class="typewriter">
-                            <h1>Career &amp; Technical Education</h1>
+                            <h1>Career &amp; Technical YEA</h1>
                     </div>
             </hgroup>
             <!-- <nav class="more">
