--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             
 
         <header class="bg-gradient2"id="home">
-        <div id="container">     </div>
+        <div id="container">     
         <header class="info">
             <hgroup class="about">
                     <div class="typewriter">
-                            <h1>Career &amp; Technical YEA</h1>
+                            <h1>Career &amp; Technical OH</h1>
                     </div>
             </hgroup>
             <!-- <nav class="more">
@@ -100,6 +100,7 @@
                 <a href="https://github.com/soulwire/sketch.js" target="_blank">View on Github</a>
             </nav> -->
         </header>
+    </div>
 
         </header>
 
