added aida logo

--- a/design-brief.html
+++ b/design-brief.html
@@ -62,7 +62,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <nav class="navbar navbar-dark navbar-expand-lg">
-                                    <a class="navbar-brand" href="index.html#home"><img src="" class="img-fluid" alt=""><b>A.I.D.A</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+                                    <a class="navbar-brand" href="index.html#home"><img style="margin-bottom:10px;margin-right:15px" src="./img/aida-logo.png" class="img-fluid" height="30" width="30"alt=""><b>A.I.D.A</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                                     <div class="collapse navbar-collapse" id="navbar">
                                         <ul class="navbar-nav ml-auto">
                                             <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
@@ -86,7 +86,7 @@
         <div id="container">  </div>
         <header class="info2">
                 <div class="AIDA">
-                        <img src="smiley.gif" alt="Smiley face" height="42" width="42">
+                        <img src="./img/aida-logo.png" alt="Smiley face" height="102" width="102">
                 </div>
                 <div class="typewriter">
                         <h3>Meet your virtual tutor. </h3>
@@ -104,10 +104,7 @@
                   <div class="inner" id="inner">
                     <div class="content" id="content"></div>
                   </div>
-                  <div class="bottom" id="bottom">
-                    <textarea class="input" id="input"></textarea>
-                    <div class="send" id="send"></div>
-                  </div>
+                 
                 </div>
                 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
@@ -332,7 +329,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <img src="./img/iphonex.png" alt="iphone" class="img-fluid">
+                    <img src="./img/aiga-logo-full.png" style="margin-bottom:40px;margin-left:15px" alt="iphone" class="img-fluid">
                 </div>
 
             </div>
