--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -28,7 +28,6 @@
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <!-- Main css -->
         <link href="css/style.css" rel="stylesheet">
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
 
@@ -37,11 +36,6 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body data-spy="scroll" data-target="#navbar" data-offset="30">
-        <script>
-            window.onload = function() {
-                document.getElementById("firstCard").focus();
-            };
-        </script>
         <div class="nav-menu fixed-top">
             <div class="container">
                 <div class="row">
@@ -50,12 +44,12 @@
                             <a class="navbar-brand" href="index.html#home"><img src="" class="img-fluid" alt=""><b>W.W.P HSN</b></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
                             <div class="collapse navbar-collapse" id="navbar">
                                 <ul class="navbar-nav ml-auto">
-                                    <li class="nav-item"> <a class="nav-link active" href="#home">Home <span class="sr-only">(current)</span></a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">WHAT IS TSA</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#who_we_are">WHO WE ARE</a> </li>
+                                    <li class="nav-item"> <a class="nav-link active" href="#home">HOME <span class="sr-only">(current)</span></a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#what_is_tsa">INTRODUCTION</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#activities">ACTIVITIES</a> </li>
-                                    <li class="nav-item"> <a class="nav-link" href="#competitions">COMPETITIONS</a> </li>
                                     <li class="nav-item"> <a class="nav-link" href="#student_projects">PROJECTS</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#officers">OFFICERS</a> </li>
+                                    <li class="nav-item"> <a class="nav-link" href="#competitions">COMPETITIONS</a> </li>
                                     <li class="nav-item"><a href="./index.html#home" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">Career &amp; Tech</a></li>
                                     <li class="nav-item"><a href="./design-brief.html" class="btn btn-outline-light my-3 my-sm-0 ml-lg-3">DESIGN BRIEF</a></li>
                                 </ul>
