--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -85,9 +85,9 @@
         <script src="./js/script.js"></script>
         <script src="./js/cards.js"></script>
 
-
+        
         <script>
-
+            if(){
             // ----------------------------------------
             // Particle
             // ----------------------------------------
@@ -228,7 +228,7 @@
 
                 }
             };
-
+            }
         </script>
         <!-- 
 What is TSA beginning
@@ -359,20 +359,32 @@ Who We Are beginning
                     <div class="testimonials owl-carousel">
                         <div class="testimonials-single">
                             <h3 class = "text-white">Biotechnology Design</h3>
-                            <blockquote class="blockquote text-white">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
-                            </blockquote>
+                            <br>
+                            <div class = "row">
+                                <blockquote class="blockquote text-white col col-lg-7">One of the events our club is competing in is the Biotechnology Design. The event’s topic is Food, leading the group of students to focus on a biological disease that is killing a huge proportion of food in Eastern Africa. Their solution: Find a bacteria to reverse the effect of MLND, the disease affecting the crops, on the DNA of the crop. This event focuses on solutions to the growing food epidemic across different parts of the world, and how new technology can help to reverse the problem and provide support to the people around the world experiencing the dilemma.
+                                </blockquote>
+                                <img class = "col col-lg-5" src = "./img/bubbles.jpg">
+                            </div>
                         </div>
                         <div class="testimonials-single">
                             <h3 class = "text-white">Software Development</h3>
-                            <blockquote class="blockquote text-white">One of our software development groups is attempting to solve the problem of food wastage at restaurants. They developed a platform to allow restaurants to sell their otherwise unsold food at cheaper prices, driving customer volume AND selling food that would have otherwise been thrown out. They created a web dashboard for the restaurants, a mobile app for customers, and even an Amazon Alexa skill for convenience.
+                            <br>
+                            <div class = "row">
+                            <blockquote class="blockquote text-white col col-lg-7">One of our software development groups is attempting to solve the problem of food wastage at restaurants. They developed a platform to allow restaurants to sell their otherwise unsold food at cheaper prices, driving customer volume AND selling food that would have otherwise been thrown out. They created a web dashboard for the restaurants, a mobile app for customers, and even an Amazon Alexa skill for convenience.
                             </blockquote>
+                            <img class = "col col-lg-5" src = "./img/bubbles.jpg">
+                            </div>
                         </div>
                         <div class="testimonials-single">
-                            <h3 class = "text-white">Smart Mirror</h3>
-                            <h5 class="mt-4 mb-2 text-white">Sahit Penmatcha</h5>
-                            <blockquote class="blockquote text-white">Students in our school like Sahit Penmatcha, a junior, take initiative to build projects outside of school using their knowledge gained through experience in engineering courses. Sahit created a smart mirror using just a mirror and Amazon Alexa. 
+                            <h3 class = "text-white">Video Game Design</h3>
+                            <br>
+                            <div class="row">
+                            <blockquote class="blockquote text-white col col-lg-7">
+                                The video game design group was challenged to create a sports theme game. They used the Unity engine to create a car racing game.
                             </blockquote>
+                                <img class = "col col-lg-5" src = "./img/bubbles.jpg">
                         </div>
+                            </div>
                     </div>
 
                 </div>
@@ -393,34 +405,34 @@ Who We Are beginning
                         <p class="description">Sahit is the founder and president of TSA. He is passionate about computer science and would like to share his love for computers with others through TSA. The president manages the overall meeting, details the committee of what should be done, and sets up meetings with other sources.</p>
                     </div>
                     <div class="product" product-id="2">
-                        <div class="thumbnail"><img src="officers/sahit.png"/></div>
+                        <div class="thumbnail"><img src="officers/neil.png"/></div>
                         <h3>Neil Patel</h3>
                         <h4>Vice President</h4>
                         <p class="description">The Vice President assists officers in accomplishing tasks assigned by President, and takes control of club if President is not present.
                         </p>
                     </div>
                     <div class="product" product-id="3">
-                        <div class="thumbnail"><img src="officers/sahit.png"/></div>
+                        <div class="thumbnail"><img src="officers/george.png"/></div>
                         <h3>George Zhou</h3>
                         <h4>Secretary</h4>
                         <p class="description">The secretary records the participation of the club members, and communicates with the students over the event progress.
                         </p>
                     </div>
                     <div class="product" product-id="4">
-                        <div class="thumbnail"><img src="officers/sahit.png"/></div>
+                        <div class="thumbnail"><img src="officers/skandan.png"/></div>
                         <h3>Skandan Venkatraman</h3>
                         <h4>Treasurer</h4>
                         <p class="description">The treasurer controls the financial portions of the club, maintains club’s bank account, updates other officers on account information, and is notified of any expenditures necessary.</p>
                     </div>
                     <div class="product" product-id="5">
-                        <div class="thumbnail"><img src="officers/sahit.png"/></div>
+                        <div class="thumbnail"><img src="officers/aparna.png"/></div>
                         <h3>Aparna Rajesh</h3>
                         <h4>Reporter</h4>
                         <p class="description">The reporter reports TSA club’s progress or any news to the public, contributes to the TSA web page, and contacts club president if any urgent news regarding the club is released.
                         </p>
                     </div>
                     <div class="product" product-id="6">
-                        <div class="thumbnail"><img src="officers/sahit.png"/></div>
+                        <div class="thumbnail"><img src="officers/jagdeep.png"/></div>
                         <h3>Jagdeep Gill</h3>
                         <h4>Sergeant-At-Arms</h4>
                         <p class="description">The Sergeant-At-Arms organizes room before every club meeting, assists President in any procedures or events requiring altering the environment, and enforces club rules when necessary.
@@ -567,7 +579,7 @@ Who We Are beginning
                         </div>
                         <div class="container">
                             <div class="accordions__content rich-text" v-bind:class="{ 'accordions__content--expanded': isOpen('Credentials') }"><p class = "text-white" >The NJ TSA Leadership Conference was a meeting between all the officers of each participating school’s TSA club in New Jersey. The officers of our club went with curiosity, as a school new to TSA, yet came back with confidence in the club’s goals and members. The meeting helped each school learn more about TSA’s overall mission and gave information more specific to each competition and how to prepare the club for these exclusive events. Additionally, guest speakers and alumni with successful backgrounds gave their opinion and advice to the officers about how to manage the club, and why competing in these events are crucial to the community. Also, being able to see the officers of other more experienced schools gave insight to the officers of what the club may evolve into with time and success.
-</p></div>
+                                </p></div>
                         </div>
                     </section>
                 </div>
