--- a/design-brief.html
+++ b/design-brief.html
@@ -5,7 +5,7 @@
         <title>TSA</title>
         <link rel="stylesheet" href="css/example.css">
         <link rel="stylesheet" href="css/carousel.css">
-        <link rel="stylesheet" href="css/competitions.css">
+        <link rel="stylesheet" href="css/competitions2.css">
 
         
 
