--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -87,7 +87,7 @@
 
         
         <script>
-            if(){
+            if(true){
             // ----------------------------------------
             // Particle
             // ----------------------------------------
