--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -87,7 +87,9 @@
 
         
         <script>
-            if(true){
+            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+            }
+            else {
             // ----------------------------------------
             // Particle
             // ----------------------------------------
