--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         </div>
 
 
-        <header class="bg-gradient2"id="home">
+        <header class="bg-gradient2 "id="home">
+            <div class = "backgrounddiv">
             <div id = "container">     
                 <header class="info">
                     <hgroup class="about">
@@ -110,11 +111,8 @@
 </nav> -->
                 </header>
             </div>
-
+            </div>
         </header>
-
-
-
 
         <div class="section light-bg" id="features">
             <div class="container">
@@ -592,7 +590,8 @@
 
 
 
-
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            } else {
             function Particle( x, y, radius ) {
                 this.init( x, y, radius );
             }
@@ -657,10 +656,6 @@
             });
 
 
-
-            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
-
-            } else {
 
                 demo.setup = function() {
 
@@ -739,11 +734,7 @@
                     }
 
                 }
-            };
-
-
-
-
+            }
 
         </script>
 
