--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -87,9 +87,7 @@
 
         
         <script>
-            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
-            }
-            else {
+            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){}
             // ----------------------------------------
             // Particle
             // ----------------------------------------
@@ -230,7 +228,7 @@
 
                 }
             };
-            }
+
         </script>
         <!-- 
 What is TSA beginning
