--- a/tsa-chapter.html
+++ b/tsa-chapter.html
@@ -61,7 +61,8 @@
             </div>
         </div>
         <header class="bg-gradient2"id="home">
-            <div id="container"></div>
+            <div class = "backgrounddiv2">
+            <div id="container">
             <header class="info">
                 <hgroup class="about">
                     <div class="typewriter">
@@ -73,6 +74,8 @@
 <a href="https://github.com/soulwire/sketch.js" target="_blank">View on Github</a>
 </nav> -->
             </header>
+            </div>
+            </div>
         </header>
         <script src="./js/sketch.js"></script>
         <script  src="./js/timeline.js"></script>
@@ -87,7 +90,8 @@
 
         
         <script>
-            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){}
+            if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)){
+            } else {
             // ----------------------------------------
             // Particle
             // ----------------------------------------
@@ -228,6 +232,7 @@
 
                 }
             };
+            }
 
         </script>
         <!-- 
